k8s/network-policy/allow-api-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:

  name: allow-api-postgres

  namespace: shop


spec:

  podSelector:

    matchLabels:

      app: postgres


  policyTypes:

  - Ingress


  ingress:

  - from:

    - podSelector:

        matchLabels:

          app: products-api


    - podSelector:

        matchLabels:

          app: orders-api


    ports:

    - protocol: TCP

      port: 5432
