k8s/network-policy/allow-ingress-to-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:

  name: allow-ingress-controller

  namespace: shop


spec:

  podSelector:

    matchExpressions:

    - key: app

      operator: In

      values:
      - products-api
      - orders-api


  policyTypes:

  - Ingress


  ingress:

  - from:

    - namespaceSelector:

        matchLabels:

          kubernetes.io/metadata.name: ingress-nginx


    ports:

    - protocol: TCP
      port: 8000

    - protocol: TCP
      port: 3000
