k8s/network-policy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: shop

spec:

  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
